# blazingdb-communication

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/Modules/: ConfigureRapidJSON.cmake  ConfigureSimpleWebServer.cmake
cmake/Modules/RapidJSON/: RapidJSONConfig.cmake
src/: CMakeLists.txt  Node.cpp  Node.h
src/blazingdb/: CMakeLists.txt
src/blazingdb/burst/: README.md
src/blazingdb/communication/: Address-Internal.cc  Address-Internal.h  Address.cc  Address.h  Buffer.cc  Buffer.h  CMakeLists.txt  Cluster.cc  Cluster.h  Configuration.cc  Configuration.h  Context.cc  Context.h  ContextToken.cc  ContextToken.h  Listener.h  Manager.cc  Manager.h  Message.cc  Message.h  MessageSerializer.h  MessageToken.cc  MessageToken.h  Node.cc  Node.h  NodeToken.cc  NodeToken.h  Router.cc  Router.h  RouterBuilder.cc  RouterBuilder.h  Server.cpp  Server.h  buffer-test.cc  configuration-test.cc  manager-test.cc  node-test.cc  processes-message-test.cc  processes-test.cc  result.h  (+1 more)
src/blazingdb/communication/internal/: Trader.cpp  Trader.hpp  TraderLock.cpp  TraderLock.hpp
src/blazingdb/communication/messages/: BaseComponentMessage.h  ColumnDataMessage.h  DataPivot.cpp  DataPivot.h  DataScatterMessage.h  GpuComponentMessage.h  Message.cc  Message.h  MessageToken.cc  MessageToken.h  NodeDataMessage.cc  NodeDataMessage.h  PartitionPivotsMessage.cpp  PartitionPivotsMessage.h  SampleToNodeMasterMessage.h  Serializer.h  message-test.cpp
src/blazingdb/communication/messages/tools/: gdf_columns-test.cpp  gdf_columns.cpp  gdf_columns.h
src/blazingdb/communication/messages/tools/gdf_columns/: BufferBase.cpp  BufferBase.hpp  CollectorTest.cpp  DispatcherTest.cpp  WithHostAllocation.cpp  WithHostAllocation.hpp  interfaces.cpp  interfaces.hpp
src/blazingdb/communication/messages/tools/gdf_columns/buffers/: DetachedBuffer.cpp  DetachedBuffer.hpp  DetachedBufferBuilder.cpp  DetachedBufferBuilder.hpp  NullBuffer.cpp  NullBuffer.hpp  StringBuffer.cpp  StringBuffer.hpp  StringReferenceBuffer.cpp  StringReferenceBuffer.hpp  ValueBuffer.cpp  ValueBuffer.hpp  ViewBuffer.cpp  ViewBuffer.hpp
src/blazingdb/communication/messages/tools/gdf_columns/collectors/: InHostCollector.cpp  InHostCollector.hpp
src/blazingdb/communication/messages/tools/gdf_columns/common/: test-helpers.hpp
src/blazingdb/communication/messages/tools/gdf_columns/inhost/: CategoryBuilderTest.cpp  CategoryPayloadInHostBase.cpp  CategoryPayloadInHostBase.hpp  CollectorDispatcherIntegrationTest.cpp  DTypeInfoPayloadInHostBase.cpp  DTypeInfoPayloadInHostBase.hpp  GdfColumnPayloadInHostBase.cpp  GdfColumnPayloadInHostBase.hpp  InHostCategoryBuilder.cpp  InHostCategoryBuilder.hpp  InHostCategoryBuilderTest.cpp  InHostCategoryPayload.cpp  InHostCategoryPayload.hpp  InHostCategorySpecialized.cpp  InHostCategorySpecialized.hpp  InHostDTypeInfoBuilder.cpp  InHostDTypeInfoBuilder.hpp  InHostDTypeInfoBuilderTest.cpp  InHostDTypeInfoPayload.cpp  InHostDTypeInfoPayload.hpp  InHostDTypeInfoSpecialized.cpp  InHostDTypeInfoSpecialized.hpp  InHostGdfColumnBuilder.cpp  InHostGdfColumnBuilder.hpp  InHostGdfColumnBuilderHelpers.cpp  InHostGdfColumnBuilderHelpers.hpp  InHostGdfColumnBuilderTest.cpp  InHostGdfColumnCollector.cpp  InHostGdfColumnCollector.hpp  InHostGdfColumnDispatcher.cpp  InHostGdfColumnDispatcher.hpp  InHostGdfColumnIOHelpers.cpp  InHostGdfColumnIOHelpers.hpp  InHostGdfColumnIterator.hpp  InHostGdfColumnPayload.cpp  InHostGdfColumnPayload.hpp  InHostGdfColumnSpecialized.cpp  InHostGdfColumnSpecialized.hpp
src/blazingdb/communication/messages/tools/gdf_columns/mixins/: ActualBufferMixIn.hpp
src/blazingdb/communication/messages/tools/gdf_columns/payloads/: BlankPayload.cpp  BlankPayload.hpp
src/blazingdb/communication/messages/tools/gdf_columns/values/: CudaMemoryRuntime.cpp  CudaMemoryRuntime.hpp  UCDTypeInfoValue.cpp  UCDTypeInfoValue.hpp  UCGdfColumnValue.cpp  UCGdfColumnValue.hpp  UCGdfColumnValueTest.cpp  interfaces.cpp  interfaces.hpp
src/blazingdb/communication/network/: Client.cc  Client.h  ClientExceptions.h  MessageQueue.cpp  MessageQueue.h  Server.cc  Server.h  ServerFrame.h  Status.h  integration-server-client-test.cc  server-test.cc
src/blazingdb/communication/shared/: Builder.h  Entity.h  Identity.h  JsonSerializable.h  macros.h
src/blazingdb/result/: Result.h
src/blazingdb/uc/: API.h  Agent.hpp  Buffer.hpp  CMakeLists.txt  Capabilities.cpp  Capabilities.hpp  Context.cpp  Context.hpp  ContextHelpers.cpp  Manager.hpp  README.md  Record.hpp  Trader.hpp  Transport.hpp  UCPool.hpp  api-common-test.cpp  api-common-test.hpp  api-processes-test.cpp  api-test.cpp  api-threads-test.cpp  context-stress-test.cpp  context-test.cpp
src/blazingdb/uc/internal/: ManagedAgent.hpp  ManagedContext.cpp  ManagedContext.hpp  Resource.hpp  ViewContext.cpp  ViewContext.hpp  buffers.hpp  context.hpp  macros.hpp  resources.hpp
src/blazingdb/uc/internal/agents/: AddressableAgent.cpp  AddressableAgent.hpp  ManagedAgent.cpp  ManagedAgent.hpp  ViewAgent.cpp  ViewAgent.hpp
src/blazingdb/uc/internal/buffers/: AccessibleBuffer.hpp  AllocatedBuffer.hpp  LinkerBuffer.cpp  LinkerBuffer.hpp  ReferenceBuffer.hpp  RemoteBuffer.cpp  RemoteBuffer.hpp  ViewBuffer.cpp  ViewBuffer.hpp
src/blazingdb/uc/internal/buffers/records/: RemotableRecord.cpp  RemotableRecord.hpp
src/blazingdb/uc/internal/buffers/transports/: ZCopyTransport.cpp  ZCopyTransport.hpp
src/blazingdb/uc/internal/tcp/: TCPAgent.cpp  TCPAgent.hpp  TCPContext.cpp  TCPContext.hpp  TCPTransport.cpp  TCPTransport.hpp  tcp-context-test.cpp
src/blazingdb/uc/util/: macros.hpp
tests/: CMakeLists.txt
tests/component-messages-test/: CMakeLists.txt  component-messages-test.cpp
tests/foo-test/: CMakeLists.txt  test.cpp
tests/server-test/: CMakeLists.txt  server-test.cpp
tests/utils/: custrings.h  gdf_column.cpp  gdf_column.h  gdf_column_cpp.cpp  gdf_column_cpp.h
